ADR-1632 Get subscription contact preferences and include when creating user answers

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -66,7 +66,23 @@ microservice {
       host = localhost
       port = 8500
     }
+
+    subscription {
+      protocol = http
+      host = localhost
+      port = 16004
+      clientId = "subscription stub client id"
+      secret   = "Shh! It's a secret!"
+      url {
+        subscriptionSummary = "/etmp/RESTAdapter/excise/subscriptionsummary"
+      }
+    }
   }
+}
+
+downstream-apis {
+  idType = "ZAD"
+  regime = "AD"
 }
 
 enrolment {
