ADR-1633 Config and test updates for getVerifiedEmails

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -77,6 +77,15 @@ microservice {
         subscriptionSummary = "/etmp/RESTAdapter/excise/subscriptionsummary"
       }
     }
+
+    email-verification {
+      protocol = http
+      host = localhost
+      port = 16004
+      url {
+        getVerifiedEmails = "/email-verification/verification-status"
+      }
+    }
   }
 }
 
