--- a/conf/application.conf
+++ b/conf/application.conf
@@ -72,7 +72,7 @@ microservice {
       host = localhost
       port = 16004
       clientId = "subscription stub client id"
-      secret   = "Shh! It's a secret!"
+      secret   = "override-me!"
       url {
         subscriptionSummary = "/etmp/RESTAdapter/excise/subscriptionsummary"
       }
@@ -81,10 +81,16 @@ microservice {
     email-verification {
       protocol = http
       host = localhost
-      port = 16004
+      port = 9891
       url {
         getVerifiedEmails = "/email-verification/verification-status"
       }
+    }
+
+    alcohol-duty-stubs {
+      protocol = http
+      host = localhost
+      port = 16004
     }
   }
 }
@@ -104,3 +110,6 @@ crypto {
   isEnabled = true
 }
 
+features {
+  email-verification-integration: false
+}
