ADR-2151 Submit contact preferences - controller, service and connector

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -92,6 +92,29 @@ microservice {
       host = localhost
       port = 16004
     }
+
+    submit-preferences {
+      protocol = http
+      host     = localhost
+      port     = 16004
+      clientId = "submission stub client id"
+      secret   = "override-me!"
+      url {
+        submitPreferences = "/etmp/RESTAdapter/excise/emailcontactpreference"
+      }
+    }
+
+    circuit-breaker {
+      max-failures  = 5
+      call-timeout  = 10 seconds
+      reset-timeout = 1 minute
+    }
+
+    retry {
+      retry-attempts = 2
+      retry-attempts-post = 1
+      retry-attempts-delay = 500 milliseconds
+    }
   }
 }
 
