ADR-2189 | Enable audit events locally

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -54,6 +54,12 @@ play.http.router = prod.Routes
 controllers {
 }
 
+# Enable auditing to the datastream service
+
+auditing {
+  enabled = true
+}
+
 # Microservice specific config
 
 mongodb {
