--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,7 +1,8 @@
-version = 3.0.0
+version = 3.10.1
 maxColumn = 120
 lineEndings = unix
 importSelectors = singleLine
+runner.dialect = scala3
 
 project {
   git = true
